initial commit from a broken state back to a working state

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,4 +1,4 @@
-html { 
+html {
   font-size: 62.5%;
 }
 
@@ -13,4 +13,8 @@ button {
 
 button:disabled {
   cursor: default;
+}
+
+.is-active {
+  font-weight: bold;
 }
